--- a/css/application.css
+++ b/css/application.css
@@ -75,6 +75,7 @@ h3 {
   font-weight: 900;
   font-size: 2.8em;
   color: #fcfbe3;
+  word-spacing: 8px;
   text-shadow: 0 1px #000, -1px 0 #000, -1px 2px #13171a, -2px 1px #82898d, -2px 3px #13171a, -3px 2px #82898d, -3px 4px #13171a, -4px 3px #000, -4px 5px #000; }
   @media (min-width: 768px) {
     .name {
