updated hamburger color

--- a/css/application.css
+++ b/css/application.css
@@ -332,7 +332,7 @@ body {
   padding: 15px;
   display: block; }
   .hamburger .line {
-    border-bottom: 4px solid #000;
+    border-bottom: 4px solid #79bed8;
     width: 35px;
     margin-bottom: 6px;
     margin-left: auto;
