--- a/sass/tools/_variables.scss
+++ b/sass/tools/_variables.scss
@@ -54,7 +54,7 @@ $hover-shadow: 2px 2px 3px 3px $black;
 //BORDERS
 
 $top-border: 1px solid $main-border;
-$hamburger-line: 4px solid $main-border;
+$hamburger-line: 4px solid $babyblue;
 $main-nav: 3px dotted $main-border;
 $profile-image: 3px solid $main-border;
 $portfolio-images: 2px solid $main-border;
