--- a/sass/components/_containers.scss
+++ b/sass/components/_containers.scss
@@ -3,7 +3,7 @@
 
 .main-header,
 .welcome {
-	@media (min-width: $desktop-width) {
+	@include breakpoint(desktop) {
 		max-width: 1050px;
 		margin-left: auto;
 		margin-right: auto;	
@@ -11,16 +11,16 @@
 }
 
 .header-container {
-	@media (min-width: $desktop-width) {
+	@include breakpoint(desktop) {
 		width: 93%;
-		padding-top: 40px;	
+		padding-top: 40px;		
 	}
 }
 
 .text-container {
-	@media (min-width: $desktop-width) {	
+	@include breakpoint(desktop) {
 		border-left: 3px solid $magenta;
-		border-radius: 30px;
+		border-radius: 30px;	
 	}
 }
 
@@ -28,14 +28,14 @@
 	width: 100%;
 	margin: $center-item;
 
-	@media (min-width: $tablet-width) {
+	@include breakpoint(tablet) {
 		margin-top: 40px;
-		margin-bottom: 100px;
+		margin-bottom: 100px;		
 	}
 
 	p {
-		@media (min-width: $desktop-width) {
-			margin-right: 30px;
+		@include breakpoint(desktop) {
+			margin-right: 30px;			
 		}
 	}
 }
@@ -43,19 +43,18 @@
 /* ---- Portfolio ---- */
 
 .title {
-	@media (min-width: $desktop-width) {
-		margin-top: 100px;
+	@include breakpoint(desktop) {
+		margin-top: 100px;	
 	}
 }
 
 .wrapper {
-	@media (min-width: $tablet-width) {
+	@include breakpoint(tablet) {
 		max-width: 95%;
-		margin: $center-item;
+		margin: $center-item;	
 	}
-
-	@media (min-width: $desktop-width) {
-		max-width: 1050px;
+	@include breakpoint(desktop) {
+		max-width: 1050px;		
 	}
 }
 
@@ -63,23 +62,23 @@
 	width: 85%;
 	margin: $center-item;
 	
-	@media (min-width: $tablet-width) {
-		max-width: 95%;
+	@include breakpoint(tablet) {
+		max-width: 95%;	
 	}
 }
 
 .box {
-	@media (min-width: $tablet-width){
+	@include breakpoint(tablet) {
 		width: 47%;
-		height: 340px;
+		height: 340px;	
 	}
-	@media (min-width: $desktop-width) {
+	@include breakpoint(desktop) {
 		width: 31%;
 	}
 
 	p {
-		@media (min-width: $tablet-width) {
-			width: 85%;
+		@include breakpoint(tablet) {
+			width: 85%;		
 		}
 	}
 }
@@ -92,21 +91,21 @@
 	margin-bottom: 65px;
 	border-top: $top-border;
 
-	@media (min-width: $tablet-width) {
+	@include breakpoint(tablet) {
 		border-bottom: none;
 		padding-top: 30px;
-		padding-bottom: 30px;	
+		padding-bottom: 30px;		
 	}
 
 	p {
 		margin: $center-item;
 
-			@media (min-width: $tablet-width) {
+			@include breakpoint(tablet) {
 				max-width: 70%;
-				margin: 0 auto 15px;
+				margin: 0 auto 15px;			
 			}
-			@media (min-width: $desktop-width){
-				max-width: 60%;
+			@include breakpoint(desktop) {
+				max-width: 60%;			
 			}
 	}
 }
@@ -118,7 +117,6 @@
 .footer-container {
 	margin-top: 10px;
 	padding: 15px;
- 	//border-top: $top-border;
  	position: fixed;
  	left: 0px;
  	bottom: 0px;
