--- a/sass/tools/_mixins.scss
+++ b/sass/tools/_mixins.scss
@@ -1,14 +1,11 @@
 //MEDIA QUERIES
 
-@mixin breakpoint-tablet {
-	@media (min-width: #{$tablet-width}) and (max-width: #{desktop-width-1px}) {
-		@content;
+@mixin breakpoint($point) {
+	@if $point == tablet {
+		@media (min-width: #{$tablet-width}) { @content; }
 	}
-}
-
-@mixin breakpoint-desktop {
-	@media (min-width: #{$desktop-width}) {
-		@content;
+	@else if $point == desktop {
+		@media (min-width: #{$desktop-width}) { @content; }
 	}
 }
 
